--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div class="logo"><img src="%PUBLIC_URL%/ma.png" alt="馬"/></div>
+    <!-- <div class="logo"><img src="%PUBLIC_URL%/ma.png" alt="馬"/></div> -->
     <div id="root"></div>
   </body>
 </html>
