--- a/public/404.html
+++ b/public/404.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="5; URL=/404" />
+    <meta http-equiv="refresh" content="1; URL=/not-found" />
     <title>404</title>
 </head>
 <body>
-    
+    ... 😱 transporting you to a safer place 🚪
 </body>
 </html>
